--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,42 +14,55 @@
   <body>
   <div class="header-padding">
     <header>
+	<!-- ログイン状態の条件分岐 -->
 	<% if user_signed_in? %>
 
 	<div class="header-links">
 		<% cart = Cart.find_by(user_id: current_user.id) %>
-		<div class="link1"><%= link_to 'カート', cart_path(cart)  %></div>
-		<div class="link2"><%= link_to "マイページ", user_path(current_user.id) %></div>
-		<div class="link3"><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></div>
+		<%= link_to cart_path(cart) do %>
+		<div class="link1">カート</div><% end %>
+		<div class="link2"><%= link_to "マイページ", user_path(current_user.id), :style=>"color:white;" %></div>
+		<div class="link3"><%= link_to "ログアウト", destroy_user_session_path, method: :delete, :style=>"color:white;" %></div>
 
+	</div>
+	<div class="header-sub">
+		<div class="header-text2">
+			<p class="header-text3">ようこそ! <%= current_user.user_name %>さん</p>
+		</div>
+		<h1 class="header-text1"><a href="/" style="text-decoration: none;color: white">SQUARE MUSIC</a></h1>
+		<div class="search-space">
+			<%= search_form_for @search, url: products_search_path  do |f| %>
+				<div>
+				<%= f.text_field :product_name_or_product_phonetic_cont, class: "search-form" %>
+				</div>
+				<div class="search-form-btn"><%= f.submit "Search" %></div>
+			<% end %>
+		</div>
 	</div>
 
 	<% else %>
 
 	<div class="header-links">
-		<div class="link2"><%= link_to "新規登録", new_user_registration_path %></div>
-		<div class="link3"><%= link_to "ログイン", new_user_session_path %></div>
+		<div class="link2"><%= link_to "新規登録", new_user_registration_path, :style=>"color:white;" %></div>
+		<div class="link3"><%= link_to "ログイン", new_user_session_path, :style=>"color:white;" %></div>
 	</div>
-
-	<% end %>
-<!-- タイトルdiv -->
 		<div class="header-sub">
 			<div class="header-text2">
-				<p class="header-text3">ようこそ!＜USER＞<!-- ログインユーザー名を表示予定 -->さん</p>
+				<p class="header-text3">ようこそ! ゲストさん</p>
 			</div>
 			<h1 class="header-text1"><a href="/" style="text-decoration: none;color: white">SQUARE MUSIC</a></h1>
-			<div class="search-sample">
-				<!-- test -->
+			<div class="search-space">
 			<%= search_form_for @search, url: products_search_path  do |f| %>
-				<div class="form-group">
-				<%= f.label :product_name_cont, "商品名" %>
-				<%= f.text_field :product_name_or_product_phonetic_cont, class: "form-control" %>
+				<div>
+				<%= f.text_field :product_name_or_product_phonetic_cont, class: "search-form" %>
 				</div>
-				<div class="actions"><%= f.submit "Search" %></div>
+				<div class="search-form-btn"><%= f.submit "Search" %></div>
 			<% end %>
-
-			</div>
 		</div>
+	</div>
+	<% end %>
+<!-- ログイン状態の条件分岐終わり -->
+
 	</div>
 
 </header>
