オーダー完成

--- a/app/assets/stylesheets/carts.scss
+++ b/app/assets/stylesheets/carts.scss
@@ -28,14 +28,8 @@
   border-color:#dcdcdc;
 }
 
-.cart_item_2 {
-  line-height:80px;
-}
-.cart-item .col-md-3 {
-  line-height:80px;
-}
-.cart-item .col-md-1 {
-  line-height:80px;
+.cart_item_box {
+  padding-top: 30px;
 }
 .cart_quantity_form{
   margin-top: 29px;
