--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -45,7 +45,7 @@
         <td class="td-purchase">NO IMAGE</td>
         <td class="td-purchase">めっちゃいいっていう名のCD</td>
         <td class="td-purchase">計2点</td>
-        <td class="td-purchase"><%= link_to "詳細確認",order_path %></td>
+        <td class="td-purchase"><%= link_to "詳細確認",user_order_path(current_user.id) %></td>
       </tr>
       <tr>
         <td class="td-purchase">2018/6/24</td>
@@ -54,7 +54,7 @@
         <td class="td-purchase">NO IMAGE</td>
         <td class="td-purchase">っていCD</td>
         <td class="td-purchase">計2点</td>
-        <td class="td-purchase"><%= link_to "詳細確認",order_path %></td>
+        <td class="td-purchase"><%= link_to "詳細確認",user_order_path(current_user.id) %></td>
       </tr>
       
     </table>
