--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,5 +1,5 @@
 <div class="cart">
-  <div class="container">
+  <div class="container-fulid">
     <div class="row">
       <div class="col-lg-2"></div>
       <div class="col-lg-8">
@@ -9,27 +9,26 @@
             <% @cart_items.each do |cart_item| %>
             <% @product = cart_item.product %>
               <div class="cart-item">
-                <div class="col-md-2 cart_item_2">
+                <div class="col-md-2 cart_item_image">
                   <%= attachment_image_tag cart_item.product, :image, :fill, 80, 80, format: 'jpeg' %>
                 </div>
-                <div class="col-md-3"><%= cart_item.product.product_name %>
+                <div class="col-md-3 cart_item_box"><%= cart_item.product.product_name %>
                 </div>
-                <div class="col-md-2 cart_item_2"><%= cart_item.product.artist.artist_name %>
+                <div class="col-md-2 cart_item_box"><%= cart_item.product.artist.artist_name %>
                 </div>
                 <div>
                 <div class="col-md-2">
                   <%= form_for [@product, cart_item] do |f| %>
-                  <%= f.number_field :cart_quantity, class: 'cart_quantity_form', min: 0 %>個
+                  <%= f.number_field :cart_quantity, class: 'cart_quantity_form', min: 0, max: cart_item.product.stock %>個
+                  <br>
                   <%= f.submit '更新', class: 'btn btn-default btn-xs' %>
                   <% end %>
                 </div>
                 </div>
-                <div class="col-md-2 cart_item_2"><%= cart_item.product.product_price*cart_item.cart_quantity %> 円
-                  <%
-                   @total_price += cart_item.product.product_price*cart_item.cart_quantity
-                  %>
+                <div class="col-md-2 cart_item_box"><%= cart_item.product.product_price*cart_item.cart_quantity %> 円
+                  <% @total_price += cart_item.product.product_price*cart_item.cart_quantity %>
                 </div>
-                <div class="col-md-1"><%= link_to '削除', product_cart_item_path(:product_id => cart_item.product.id, :id => cart_item.id), method: :delete, class: "btn btn-danger" %>
+                <div class="col-md-1 cart_item_box"><%= link_to '削除', product_cart_item_path(:product_id => cart_item.product.id, :id => cart_item.id), method: :delete, class: "btn btn-danger" %>
                 </div>
               </div>
             <% end %>
@@ -37,7 +36,7 @@
               <div class="col-md-9"></div>
               <div class="col-md-3">
                 <p>
-                  合計金額：<%= @total_price %>円
+                  合計金額：<%= @total_price.to_s(:delimited) %>円
                 </p>
               </div>
             </div>
@@ -45,7 +44,7 @@
               <div class="col-md-9">
               </div>
                <div class="col-md-3">
-                <button class="btn btn-warning">支払い情報入力へ</button>
+                <button class="btn btn-warning"><%= link_to '注文画面へ',new_user_order_path(current_user)%></button>
               </div>
             </div>
           </div>
