--- a/app/views/orders/complete.html.erb
+++ b/app/views/orders/complete.html.erb
@@ -5,7 +5,7 @@
 	  注文が完了しました
      </div>
 	  <div class="complete-text">
-	  お客様の注文番号は<span class="under">＜5-567-3758-347＞</span>です。<br>
+	  お客様の注文番号は<span class="under"><<%= @order.order_number %>></span>です。<br>
 	  	この番号は失くさないようにして下さい。<br>
 	  	<br>
 	  	注文した商品の詳細はこちら<br>
