ユーザ管理機能その他アクセスバリデーション

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -308,10 +308,17 @@
   float: right;
 }
 
+// ユーザ詳細
+.comment {
+  padding-bottom: 20px;
+}
 
-
-
-
+.soft_delete_btn , .restoration_btn {
+  margin-bottom: 10px;
+}
+.link_tag_1 {
+  padding-top: 10px;
+}
 
 
 
