--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,10 +4,50 @@
 </div>
 <table class="edit_table" border="1">
 <%= form_for(@user) do |f| %>
-    <div class="">
-        <label class="control-label sr-only" for="inputEmail">Name</label>
-        <%= f.text_field :user_name, autofocus: true, class:"form-control", id:"inputEmail", placeholder:"名前"%>
-        <span class="fa fa-user form-control-icon" aria-hidden="true"></span>
+<% if @user.errors.any? %>
+<% @user.errors.full_messages.each do |message| %>
+<%= message %>
+<% end %>
+<% end %>
+  <tr>
+    <div class="filed">
+        <td class="td_color"><%= f.label :氏名,class: "label_name" %><br /></td>
+        <td><%= f.text_field :user_name%></td>
     </div>
-    <%= f.submit "変更を保存", class:"" %>
+  </tr>
+  <tr>
+    <div class="field">
+      <td class="td_color"><%= f.label :フリガナ,class: "label_name" %><br /></td>
+      <td><%= f.text_field :user_phonetic %></td>
+    </div>
+  </tr>
+  <tr>
+    <div class="field">
+      <td class="td_color"><%= f.label :郵便番号,class: "label_name" %><br /></td>
+      <td><%= f.text_field :postal %></td>
+    </div>
+  </tr>
+  <tr>
+    <div class="field">
+      <td class="td_color"><%= f.label :住所,class: "label_name" %><br /></td>
+      <td><%= f.text_field :address %></td>
+    </div>
+  </tr>
+  <tr>
+    <div class="field">
+      <td class="td_color"><%= f.label :電話番号,class: "label_name" %><br /></td>
+      <td><%= f.text_field :tell %></td>
+    </div>
+  </tr>
+  <tr>
+    <div class="field">
+      <td class="td_color"><%= f.label :メールアドレス,class: "label_name" %><br /></td>
+      <td><%= f.email_field :email, autofocus: true, autocomplete: "email" %></td>
+    </div>
+  </tr>
+
+</table>
+  <div class="actions">
+    <%= f.submit "編集", class:"edit_btn" %>
+  </div>
 <% end %>
