--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,7 +23,27 @@
           <td>✉︎</td><td><%= @user.email %></td>
          </tr>
         </table>
-       <%= link_to "登録情報を変更する",edit_user_path ,class:'btn btn-info' %>
+        <% if admin_signed_in? %>
+        <div>
+        <% if @user.delete_flag == false %>
+          <%= link_to "退会", "/users/#{@user.id}/soft_delete",class:'btn btn-danger soft_delete_btn', data: {confirm: "本当に退会させてよろしいですか？"} %>
+          <% else %>
+
+           <%= link_to "復旧", "/users/#{@user.id}/restoration",class:'btn btn-danger restoration_btn', data: {confirm: "本当に復旧させてよろしいですか？"}  %>
+        <% end %>
+      </div>
+      <% end %>
+        <%= link_to "登録情報を変更する",edit_user_path ,class:'btn btn-info' %>
+        <% if admin_signed_in? %>
+        <% if @unsubscribe_comment %>
+          <h2>退会コメント</h2>
+          <div class="comment"><%= @unsubscribe_comment.comment %></div>
+        <% end %>
+
+        <div class="link_tag_1">
+        <%= link_to "ユーザー一覧に戻る",users_path %>
+      </div>
+      <% end %>
    </div>
 
    <div class="user-box col-lg-9">
@@ -45,7 +65,7 @@
         <td class="td-purchase">NO IMAGE</td>
         <td class="td-purchase">めっちゃいいっていう名のCD</td>
         <td class="td-purchase">計2点</td>
-        <td class="td-purchase"><%= link_to "詳細確認",order_path %></td>
+
       </tr>
       <tr>
         <td class="td-purchase">2018/6/24</td>
@@ -54,9 +74,9 @@
         <td class="td-purchase">NO IMAGE</td>
         <td class="td-purchase">っていCD</td>
         <td class="td-purchase">計2点</td>
-        <td class="td-purchase"><%= link_to "詳細確認",order_path %></td>
+
       </tr>
-      
+
     </table>
   </div>
   </div>
