--- a/app/views/admins/passwords/edit.html.erb
+++ b/app/views/admins/passwords/edit.html.erb
@@ -8,16 +8,16 @@
     <%= f.hidden_field :reset_password_token %>
     <tr>
       <div class="field">
-        <td class="td_color"><%= f.label :"パスワード" %><br /></td>
+        <td class="td_color_pass"><%= f.label :"パスワード" %><br /></td>
         <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+        <em class="em_text">(<%= @minimum_password_length %> characters minimum)</em><br /></td>
         <% end %>
         <td><%= f.password_field :password, autofocus: true, autocomplete: "off" %></td>
       </div>
     </tr>
     <tr>
       <div class="field">
-        <td class="td_color"><%= f.label :"パスワード確認" %><br /></td>
+        <td class="td_color"><%= f.label :"パスワード確認",class: "label_name" %><br /></td>
         <td><%= f.password_field :password_confirmation, autocomplete: "off" %></td>
       </div>
     </tr>
