--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -23,10 +23,8 @@
               <td class="order_index_td"><%= user.user_name %></td>
               <td class="order_index_td"><%= user.user_phonetic %></td>
               <td class="order_index_td"><%= user.email %></td>
-              <td class="order_index_td show_link_btn"><div class="edit_link"><%= link_to "詳細",user_path(user.id)%></div>
-              <% if User.exists?(delete_flag: !"false") %>
-              <div class="unsubscribe_link"><%= link_to "退会", "/users/#{user.id}/soft_delete" %></div> </td>
-              <% end %>
+              <td class="order_index_td show_link_btn"><div><%= link_to "詳細",user_path(user.id)%></div>
+           </td>
             </tr>
           <% end %>
           </tbody>
@@ -38,3 +36,4 @@
   </div>
  </div>
 </div>
+<div class="link3"><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></div>
