--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -22,8 +22,8 @@
             <tr>
               <td class="order_index_td"><%= order.order_number %></td>
               <td class="order_index_td"><%= order.user.user_name %></td>
-              <td class="order_index_td"><%= order.created_at %></td>
-              <td class="order_index_td"><%= order.total_price %></td>
+              <td class="order_index_td"><%= order.created_at.strftime('%Y/%m/%d %H:%M') %></td>
+              <td class="order_index_td"><%= order.total_price.to_s(:delimited) %> 円</td>
               <td class="order_index_td"><%= order.status.shipment_status %></td>
               <td class="order_index_td show_link_btn"><a href="" title="">詳細</a></td>
             </tr>
