--- a/app/views/products/search.html.erb
+++ b/app/views/products/search.html.erb
@@ -18,26 +18,28 @@
 	</div>
 
 
-<!-- 検索の仮設 -->
 <div class="top-box2">
-		<h3 class="sarch-word">検索ワード"ここに検索ワードを抜粋する"</h3>
+		<h3 class="sarch-word">検索ワード"<%= params[:q][:product_name_or_product_phonetic_cont] %>"</h3>
 
-<% @products.each do |product| %>
+<div class="float-space-onsearch">
+<% @search_products.each do |product| %>
 
     <div class="sarch-products-box1">
     	<%= link_to product_path(product), :style=>"text-decoration: none; color:black;" do %>
-    		<span><p>商品名　<%= product.product_name %></p></span>
-    		<span><p>価格　<%= product.product_price %></p></span>
-    		<span><p>アーティスト名　<%= product.artist.artist_name %></p></span>
-    		<span><%= attachment_image_tag product, :image, :fill, 100, 100, format: 'jpeg' %></span>
+    		<div class="search-product-image"><%= attachment_image_tag product, :image, :fill, 150, 150, format: 'jpeg' %></div>
+    		<div>
+    			<div class="search-product-name">商品名: <%= product.product_name %></div>
+    			<div class="search-product-artist">アーティスト: <%= product.artist.artist_name %></div>
+    			<div class="search-product-price">販売価格: <%= product.product_price.to_s(:delimited) %>円</div>
+    		</div>
     	<% end %>
     </div>
 
  <% end %>
-
-<!-- 仮設終わり -->
-
-		<p class="kaminari-plan"> << ここにページネーションを実装する >> </p>
+</div>
+<div class="pagenate-space">
+<%= paginate @search_products, class: "pagenate" %>
+</div>
 
 		<div class="newproduct-space2">
 			<p>発売日が最も新しいProductを5つ表示</p>
