--- a/app/views/products/top.html.erb
+++ b/app/views/products/top.html.erb
@@ -71,36 +71,19 @@
 		</div>
 		<div class="newproduct-space">
 			<div class="product-heading">新着一覧</div>
+
+
+			<% @same_genre.order("release DESC").first(5).each do |t| %>
+			<%= link_to product_path(t), :style=>"text-decoration: none; color:black;" do %>
 			<div class="rankin-product">
-				<div class="ranking-integer">発売日</div>
-				<div class="ranking-image"></div>
-				<div class="ranking-artist-text"><p>Artist名</p></div>
-				<div class="ranking-product-text"><p>商品名</p></div>
+				<div class="ranking-integer">発売日：<%= t.release %></div>
+				<div class="ranking-image"><%= attachment_image_tag t, :image, :fill, 92, 90, format: 'jpeg' %></div>
+				<div class="ranking-artist-text"><%= t.artist.artist_name %></div>
+				<div class="ranking-product-text"><%= t.product_name %></div>
 			</div>
-			<div class="rankin-product">
-				<div class="ranking-integer">発売日</div>
-				<div class="ranking-image"></div>
-				<div class="ranking-artist-text"><p>Artist名</p></div>
-				<div class="ranking-product-text"><p>商品名</p></div>
-			</div>
-			<div class="rankin-product">
-				<div class="ranking-integer">発売日</div>
-				<div class="ranking-image"></div>
-				<div class="ranking-artist-text"><p>Artist名</p></div>
-				<div class="ranking-product-text"><p>商品名</p></div>
-			</div>
-			<div class="rankin-product">
-				<div class="ranking-integer">発売日</div>
-				<div class="ranking-image"></div>
-				<div class="ranking-artist-text"><p>Artist名</p></div>
-				<div class="ranking-product-text"><p>商品名</p></div>
-			</div>
-			<div class="rankin-product">
-				<div class="ranking-integer">発売日</div>
-				<div class="ranking-image"></div>
-				<div class="ranking-artist-text"><p>Artist名</p></div>
-				<div class="ranking-product-text"><p>商品名</p></div>
-			</div>
+			<% end %>
+			<% end %>
+
 		</div>
 	</div>
 </div>
